// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should match snapshot 1`] = `
<div
  class="_tadashi_svelte_notifications s-DVcJS0o840aA"
  style=""
>
  
  <div
    aria-live="polite"
    class="_tadashi_svelte_notification s-z9u3mgaTh3R0"
    role="status"
  >
    <div
      class="_tadashi_svelte_notification__content s-z9u3mgaTh3R0"
    >
      one
      
    </div>
     
    <button
      aria-label="delete notification"
      class="_tadashi_svelte_notification__btn s-z9u3mgaTh3R0"
    />
  </div>
  <!--&lt;Base&gt;-->
  <!--&lt;Notification&gt;-->
</div>
`;

exports[`size 1 1`] = `
<div
  class="_tadashi_svelte_notifications s-DVcJS0o840aA"
>
  
  <div
    aria-live="polite"
    class="_tadashi_svelte_notification s-z9u3mgaTh3R0"
    role="status"
  >
    <div
      class="_tadashi_svelte_notification__content s-z9u3mgaTh3R0"
    >
      one
      
    </div>
     
    <button
      aria-label="delete notification"
      class="_tadashi_svelte_notification__btn s-z9u3mgaTh3R0"
    />
  </div>
  <!--&lt;Base&gt;-->
  <!--&lt;Notification&gt;-->
</div>
`;
